8041934: com/sun/jdi/RepStep.java fails in RT_Baseline on all platforms with assert(_cur_stack_depth == count_frames()) failed: cur_stack_depth out of sync

Missing call to jvmti_method_exit from native wrapper code

Reviewed-by: twisti, dcubed, sspitsyn